# pipeline-cicd-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  promote.yml
config/: pipeline.s3.example.json  pipeline.test.json
docs/: architecture.md  assignment_compliance.md  operations_runbook.md  orchestration.md  s3_deployment.md  s3_operations_runbook.md
logs/: validation_log_sample.jsonl  validation_summary.md
mock_tables/: bronze_preview.csv  gold_region_daily.csv  gold_region_hourly.csv  silver_preview.csv
notebooks/: 01_end_to_end_demo.ipynb
orchestration/airflow/: requirements.txt
orchestration/airflow/dags/: network_metrics_pipeline.py
sample_data/: network_metrics_20250723.csv
scripts/: check_environment.ps1  preview_output.py  run_local.ps1  run_local.sh  run_stage_by_stage.ps1  run_stage_by_stage.sh  validate_submission.py
scripts/01_bronze/: 01_bronze_network_metrics.py
scripts/02_silver/: 02_silver_network_metrics.py
scripts/03_gold/: 03_gold_network_metrics_daily.py  03_gold_network_metrics_hourly.py
scripts/04_monitoring/: 04_validate_network_metrics.py
src/network_metrics/: __init__.py  alerting.py  anomaly.py  config.py  filesystem.py  jobs.py  main.py  manifest.py  paths.py  quality.py  schema.py  transforms.py
tests/: conftest.py  test_alerting.py  test_anomaly.py  test_config.py  test_jobs.py  test_manifest.py  test_quality.py  test_transforms.py
