[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-metrics-spark-pipeline"
version = "2.0.0"
description = "Incremental and observable Spark/PySpark medallion pipeline"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pyspark==3.5.0"
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]
demo = ["jupyterlab>=4,<5", "pandas>=1.5,<3", "matplotlib>=3.7,<4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
